<resources>
    <string name="app_name">Dr. Prebid</string>

    <string name="action_done">Done</string>
    <string name="action_run_tests">Run tests</string>

    <!-- Info Activity -->
    <string name="about">About</string>
    <string name="about_file">about.html</string>
    <string name="general_info">General Info</string>
    <string name="general_info_file">info-general.html</string>
    <string name="ad_server_info">Ad Server Info</string>
    <string name="ad_server_info_file">info-ad-server.html</string>
    <string name="prebid_server_info">Prebid Server Info</string>
    <string name="prebid_server_info_file">info-prebid-server.html</string>
    <string name="ad_server_test_info">Ad Server Setup Validation</string>
    <string name="ad_server_test_info_file">test-ad-server.html</string>
    <string name="real_time_demand_test_info">Real-Time Demand Validation</string>
    <string name="real_time_demand_test_info_file">test-real-time-demand.html</string>
    <string name="sdk_test_info">End-to-End SDK Validation</string>
    <string name="sdk_test_info_file">test-full-sdk.html</string>

    <!-- Welcome Activity -->
    <string name="welcome_image">Welcome activity image</string>
    <string name="action_skip">Skip</string>
    <string name="action_continue">Continue</string>

    <!-- Settings Activity -->
    <string name="general">General</string>
    <string name="ad_server">Ad Server</string>
    <string name="ad_server_settings">Ad server settings</string>
    <string name="prebid_server">Prebid Server</string>
    <string name="prebid_server_settings">Prebid server settings</string>

    <string name="banner">Banner</string>
    <string name="interstitial">Interstitial</string>
    <string name="ad_format">Ad Format</string>
    <string name="ad_size">Ad Size</string>

    <string name="ad_size_300_250">300x250</string>
    <string name="ad_size_300_600">300x600</string>
    <string name="ad_size_320_50">320x50</string>
    <string name="ad_size_320_100">320x100</string>
    <string name="ad_size_320_480">320x480</string>
    <string name="ad_size_728_90">728x90</string>

    <string-array name="ad_sizes">
        <item>@string/ad_size_300_250</item>
        <item>@string/ad_size_300_600</item>
        <item>@string/ad_size_320_50</item>
        <item>@string/ad_size_320_100</item>
        <item>@string/ad_size_320_480</item>
        <item>@string/ad_size_728_90</item>
    </string-array>

    <string name="google_ad_manager">Google Ad Manager</string>
    <string name="mopub">MoPub</string>

    <string name="bid_price">Bid price</string>
    <string name="ad_unit_id">Ad unit id</string>

    <string name="account_id">Account ID</string>
    <string name="config_id">Config ID</string>

    <string name="click_to_choose">Choose …</string>
    <string name="run_tests">Run tests</string>

    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">Ok</string>
    <string name="type_here">Type here …</string>

    <string name="prebid_server_rubicon">Rubicon</string>
    <string name="prebid_server_appnexus">AppNexus</string>
    <string name="prebid_server_custom">Custom server</string>
    
    <string name="settings_validation_failed">Invalid configuration settings found. Please check that all fields are filled.</string>

    <!-- QR code scanning -->
    <string name="qr_code_scan_title">Dr. Prebid QR Code Scanner</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This feature cannot run because it does not have the camera permission.</string>
    <string name="low_storage_error">QR Code detector dependencies cannot be downloaded due to low device storage</string>

    <string name="barcode_success">QR code read successfully</string>
    <string name="barcode_failure">No QR code captured</string>
    <string name="barcode_error">"Error reading QR code: %1$s"</string>

    <!-- Results activity -->
    <string name="summary">Summary</string>
    <string name="ad_server_setup_validation">Ad Server Setup Validation</string>
    <string name="ad_server_targeting_request_sent">Ad server request sent and Key-Value targeting sent</string>
    <string name="prebid_mobile_creative_served">Prebid Mobile creative HTML served</string>
    <string name="real_time_demand_validation">Real-Time Demand Validation</string>
    <string name="bid_requests_sent">Bid requests sent</string>
    <string name="bid_requests_sent_value">%d bid requests sent</string>
    <string name="bid_responses_received">Bid responses received</string>
    <string name="bid_responses_received_value">%d bid responses received</string>
    <string name="average_cpm_value">%.02f Average CPM</string>
    <string name="average_cpm">Average CPM</string>
    <string name="average_response_time_value">%d ms avg response time</string>
    <string name="average_response_time">Avg response time</string>
    <string name="sdk_validation">End-to-End SDK Validation</string>
    <string name="ad_unit_registered">Ad unit registered</string>
    <string name="request_prebid_server_sent">Request to Prebid Server Sent</string>
    <string name="prebid_server_response_received">Prebid Server response received</string>
    <string name="creative_content_cached">Creative content cached</string>
</resources>
