<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/group_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp">

        <RadioButton
            android:id="@+id/radio_appnexus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prebid_server_appnexus"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_rubicon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/prebid_server_rubicon"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/prebid_server_custom"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/field_custom_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/type_here"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>