<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_info_black_24"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/button_info"
            android:maxLines="1"
            android:text="@string/ad_server_settings"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_ad_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/ad_server"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_ad_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_ad_server"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_dfp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/google_ad_manager"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/radio_mopub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/mopub"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/title_bid_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_ad_server"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/bid_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_bid_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_bid_price"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableEnd="@drawable/baseline_chevron_right_black_24"
            android:drawableTint="@color/colorPrimaryDark"
            android:focusable="true"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/click_to_choose"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_bid_price"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/ad_unit_id"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_ad_unit_id"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableEnd="@drawable/baseline_chevron_right_black_24"
            android:drawableTint="@color/colorPrimaryDark"
            android:focusable="true"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/click_to_choose"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>