<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_dialog_info"
            android:tint="@android:color/black" />

        <TextView
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/button_info"
            android:maxLines="1"
            android:text="@string/general"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/title_ad_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/ad_format"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/group_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_ad_format"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/banner"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radio_interstitial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interstitial"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/title_ad_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/ad_size"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_ad_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_ad_size"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:maxLines="1"
            android:text="@string/ad_size"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>