<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container_total_result"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp">

            <ProgressBar
                android:id="@+id/progress_total_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/image_total_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </FrameLayout>


        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/outline_info_black_24"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/button_info"
            android:layout_toEndOf="@id/container_total_result"
            android:maxLines="1"
            android:text="@string/real_time_demand_validation"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_bid_requests_sent_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_total_result"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/container_bid_requests_sent_result"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical">

                <ProgressBar
                    android:id="@+id/progress_bid_requests_sent_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/image_bid_requests_sent_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/view_bid_requests_sent_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@string/bid_requests_sent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bid_responses_received_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_bid_requests_sent_result"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/container_bid_responses_received_result"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical">

                <ProgressBar
                    android:id="@+id/progress_bid_responses_received_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/image_bid_responses_received_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/view_bid_responses_received_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@string/bid_responses_received"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/view_average_cpm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_bid_responses_received_result"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:text="@string/average_cpm"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/view_average_response_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_average_cpm"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:maxLines="1"
            android:text="@string/average_response_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>